# mcp-slack

./: .env.example  .gitignore  GEMINI.md  README.md  pyproject.toml
.githooks/: pre-push
.github/workflows/: version-check.yml
src/mcp_slack/: __init__.py  client.py  config.py  server.py
src/mcp_slack/tools/: __init__.py  messaging.py
tests/: test_tools.py
