[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-slack"
version = "0.1.0"
description = "MCP server for Slack integration via FastMCP"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "slack-sdk>=3.30.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[project.scripts]
mcp-slack = "mcp_slack.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_slack"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
